Fixed overflow problem scrolling

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 html, body, .page {
     height: 100%;
+    overflow-y: hidden;
 }
 
 
